welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:11: error: Unit does not take parameters
		dogHouse();
                        ^MethodsDogHouse:17: error: Unit does not take parameters
		dogHouse();		
                        ^MethodsDogHouse:27: error: Unit does not take parameters
		dogHouse();		
                        ^MethodsDogHouse:37: error: Unit does not take parameters
		dogHouse();		
                        ^